themes/custom-serif.css
/* Reset default browser styles */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }
  
  html {
    height: 100%;
  }
  
  /* Set body background color */
  body {
    background-color: #fff;
    min-height: 100%;
    font-family: Times New Roman;
  }
  
  /* Style the navigation */
  nav {
    background-color: #fff;
    margin: 0 auto;
  }
  
  a {
    color: #0084ff;
    text-decoration: none;
  }
  
  nav a {
    font-size: 16px;
    line-height: 1.5;
    margin-right: 1em;
    display: inline-block;
  }
  
  /* Style the content */
  .content {
    margin: 0 auto;
    padding: 20px;
    background-color: #fff;
    padding-bottom: 10px;
    cursor: default;
  }
  
  .content main, .content nav {
    max-width: 700px;
    margin: 0 auto;
  }
  
  .content h1 {
    font-size: 36px;
    font-weight: 700;
    margin-bottom: 10px;
    line-height: 1.2;
  }
  
  .content h2 {
    font-size: 28px;
    font-weight: 700;
    margin-bottom: 10px;
    line-height: 1.2;
  }
  
  .content h3 {
    font-size: 24px;
    font-weight: 700;
    margin-bottom: 10px;
    line-height: 1.2;
  }
  
  .content p {
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 20px;
    line-height: 2em;
  }
  
  .content img {
    max-width: 100%;
    height: auto;
    margin-bottom: 20px;
  }

  .content img.button, .content div.button {
    margin-bottom: 0;
    width: 88px;
    height: 31px;
    display: inline-block;
  }
  
  .content blockquote {
    margin: 0;
    padding: 10px;
    background-color: #f6f6f6;
    border-left: 4px solid #d1d1d1;
    margin-bottom: 20px;
    font-size: 16px;
    line-height: 1.5;
    color: #666;
  }
  
  table {
    width: -webkit-fill-available;
    border-collapse: collapse;
    margin-bottom: 1em;
    table-layout: fixed;
  }
  
  th,
  td {
    text-align: left;
    vertical-align: top;
    border: 1px solid #ddd;
    padding: 1em;
    word-wrap: break-word;
  }
  
  th:empty {
    display: none;
  }
  
  tbody tr {
    display: table-row;
  }
  
  tbody td {
    display: table-cell;
  }
  
  th:empty {
    display: none;
  }
  
  ul {
    margin: 0;
    margin-bottom: 1em;
    padding: 0;
  }
  
  li {
    margin: 0;
    margin-left: 1em;
    padding: 0;
    line-height: 1.6;
  }
  
  footer {
    bottom: 0;
    width: 100%;
    padding: 0.5em;
    text-align: center;
    color:slategray;
    height:30px
  }

  .wrapper {
    min-height: calc(100vh - 30px);
  }
  
  @media only screen and (max-width: 768px) {
    /* Adjust font sizes for smaller screens */
    nav a {
      font-size: 16px;
      margin-right: 0.5em;
    }
    .content h1 {
      font-size: 28px;
    }
    .content h2 {
      font-size: 24px;
    }
    .content h3 {
      font-size: 20px;
    }
    .content p {
      font-size: 16px;
    }
    .content blockquote {
      font-size: 16px;
    }
    /* Remove background color and padding for mobile */
    html {
      font-size: 16px;
    }
    .content {
      padding: 1em;
      max-width: none;
      margin: 0;
    }
  }
  

  html, body {
    height: 100%;
  }

  code {
    background-color: #e6e6e6;
  }

  pre code {
    display: block;
    margin-bottom: 1.5em;
    word-wrap:break-word;
    overflow: auto;
    padding: 1em;
  }

  main p:has(img) {
    text-align: center;
  }

  .toc {
    margin-bottom: 2em;
  }

  .categoryTag {
    border-radius: 2em;
    border: 1px solid gray;
    padding-inline: 0.4em;
    padding-block: 0.1em;
    display: inline-block;
    color: gray;
    font-family: monospace;
    margin-bottom: 1em;
  }

